# Jibreel-compiler

./: dependecies-install.list
.github/workflows/: Remake-PKGBUILD-and-Build.yml  compiler-test.yml  compiler.yml
compilation/: teste
corectrl/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
corectrl-1.3.5/: CHANGELOG.md  CMakeLists.txt
corectrl-1.3.5/src/: CMakeLists.txt
corectrl-1.3.5/src/app/: appfactory.cpp
corectrl-1.3.5/src/common/: cryptolayer.cpp  fileutils.cpp  logger.h  stringutils.h
corectrl-1.3.5/tests/: CMakeLists.txt
corectrl-1.3.5/tests/src/: test_amdfanauto.cpp  test_amdfancurve.cpp  test_amdfanfixed.cpp  test_amdfanmode.cpp  test_amdgpuinfopm.cpp  test_amdgpuinfopmoverdrive.cpp  test_amdgpuinfouniqueid.cpp  test_amdgpuinfovbios.cpp  test_amdpmauto.cpp  test_amdpmautor600.cpp  test_amdpmdynamicfreq.cpp  test_amdpmfixedr600.cpp  test_amdpmfreqmode.cpp  test_amdpmfreqvolt.cpp  test_amdpmoverclock.cpp  test_amdpmpowerprofile.cpp  test_amdpmvoltcurve.cpp  test_amdppdpmhandler.cpp  test_commandqueue.cpp  test_commonutils.cpp  test_cpu.cpp  test_cpufreq.cpp  test_cpuinfo.cpp  test_cpuinfolscpu.cpp  test_cpuutils.cpp  test_gpu.cpp  test_gpuinfo.cpp  test_gpuinfoopengl.cpp  test_gpuinforevision.cpp  test_gpuinfovram.cpp  test_gpuinfovulkan.cpp  test_hwidtranslator.cpp  test_pmpowerstatemode.cpp  test_swinfo.cpp  test_swinfomesa.cpp  test_sysmodel.cpp
corectrl-1.3.5/tests/src/common/: controlmock.h  sensormock.h
corectrl/cmake/: Findeasyloggingpp.cmake
corectrl/debian/: changelog
corectrl/src/: CMakeLists.txt  resources.qrc
corectrl/src/app/: app.cpp
(+209 files in other folders)
